Update html by adding id's to buttons

--- a/index.html
+++ b/index.html
@@ -8,22 +8,25 @@
 </head>
 <body>
   <div class="container">
+    <h1>Game-Day Match!</h1>
     <div class="main-content">
       <div class="scores">
-        <h1>Game-Day Match!</h1>
+        
 
         <div class="team">
           <h2>Home</h2>
-          <button>+1</button>
-          <button>+2</button>
-          <button>+3</button>
+          <p class="home-score">0</p>
+          <button id="home-btn1">+1</button>
+          <button id="home-btn2">+2</button>
+          <button id="home-btn3">+3</button>
         </div>
 
         <div class="team">
           <h2>Guest</h2>
-          <button>+1</button>
-          <button>+2</button>
-          <button>+3</button>
+          <p class="guest-score">0</p>
+          <button id="guest-btn1">+1</button>
+          <button id="guest-btn2">+2</button>
+          <button id="guest-btn3">+3</button>
         </div>
       </div>
     </div>
