--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Your browser does not support HTML5 video.
    </video> 
   <div class="container">
-    <h1>Game-Day Match!</h1>
+    <h1>Champion's Clash Match Day🏀</h1>
     <div class="main-content">
       <div class="scores">
         
@@ -38,6 +38,7 @@
         </div>
         
       </div>
+      <button id="reset-scores">Reset Scores</button>
       <p class="update">
             Leading Team: 
         </p>
